Fix UI score and health num spacing

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -199,6 +199,10 @@ h2 {
     margin-top: 15px;
 }
 
+.ui-value {
+    margin-left: 0.25em;
+}
+
 /* castle styles */
 #castle {
     background-image: url('../img/castle.png');
